# ebook-tracker

./: .gitignore  .graphify_uncached.txt  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  make-vector.js  next.config.js  normalize.js  package-lock.json  package.json  tailwind.config.js  trace.js  tsconfig.tsbuildinfo
.github/workflows/: deploy.yml  library-submission.yml
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/: PwaProviders.tsx  globals.css  layout.tsx  page.tsx
books/: Leviathan Wakes — Daniel James Abraham.bookbuddy  README.md
components/: ArcsPanel.tsx  BookBuddyIcon.tsx  BookFilterSelector.tsx  BookStructureEditor.tsx  BookmarkModal.tsx  CalibreLibrary.tsx  ChapterSelector.tsx  CharacterCard.tsx  CharacterModal.tsx  ChatPanel.tsx  EntityManager.tsx  EntityPicker.tsx  GithubLibrary.tsx  LibrarySubmitModal.tsx  LocationBoard.tsx  LocationGraph.tsx  LocationModal.tsx  MapBoard.tsx  NarrativeArcModal.tsx  ProcessingQueue.tsx  SearchFAB.tsx  SearchSheet.tsx  SeriesPicker.tsx  SettingsModal.tsx  StoryTimeline.tsx  SubwayMap.tsx  UploadZone.tsx  WelcomeBanner.tsx
components/cards/: ArcCard.tsx  (+2 more)
lib/: ai-client.ts  ai-shared.ts  chapter-storage.ts  chat-context.ts  context-window.ts  epub-parser.ts  generate-arcs.ts  group-locations.ts  llama-plugin.ts  llm.ts  local-llm.ts  rate-limiter.ts  reconcile.ts  resolve-locations.ts  series.ts  use-derived-entities.ts  validate-entities.ts
public/: _pwa-meta.html  manifest.json  sw.js
scripts/: generate-pwa-assets.js  mobile-build.js
types/: index.ts
(+62 files in other folders)
